Fixed shortness of body width on mobile pages

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    position: absolute;
+}
+
 footer {
     background: #00252E;
     color: #ffff;
